--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@ const chart = LightweightCharts.createChart(
   }
 );
 
-const candleSeries = chart.addSeries({
+chart.addSeries({
   type: "Candlestick",
   upColor: "#ffd700",
   downColor: "#ff4b4b",
